--- a/content/guides/learn/syntax.adoc
+++ b/content/guides/learn/syntax.adoc
@@ -22,24 +22,22 @@ The `;` creates a comment to the end of the line. Sometimes multiple semicolons 
 
 [source, clojure]
 ----
-42              ; fixed precision integers - 64-bit integer (from -2^63 to 2^63-1)
--1.5            ; fixed precision floating point - 64-bit float (IEEE 754)
-22/7            ; Ratio
-42N             ; arbitrary precision integer
-1.0M            ; arbitrary precision fixed-point decimal
+42        ; integer
+-1.5      ; floating point
+22/7      ; ratio
 ----
 
-Integers are read as fixed precision when they are in range and arbitrary precision otherwise. A trailing `N` can be used to force arbitrary precision. Clojure also supports the Java syntax for octal (prefix `0`), hexadecimal (prefix `0x`) and arbitrary radix (prefix with base then `r`) integers. Ratios are provided as their own type combining a numerator and denominator.
+Integers are read as fixed precision 64-bit integers when they are in range and arbitrary precision otherwise. A trailing `N` can be used to force arbitrary precision. Clojure also supports the Java syntax for octal (prefix `0`), hexadecimal (prefix `0x`) and arbitrary radix (prefix with base then `r`) integers. Ratios are provided as their own type combining a numerator and denominator.
 
-Floating point values are read as double-precision floats unless the `M` suffix is supplied. Exponential notation is also supported. The special symbolic values `##Inf`, `##-Inf`, and `##NaN` represent positive infinity, negative infinity, and "not a number" values respectively.
+Floating point values are read as double-precision 64-bit floats, or arbitrary precision with an `M` suffix. Exponential notation is also supported. The special symbolic values `##Inf`, `##-Inf`, and `##NaN` represent positive infinity, negative infinity, and "not a number" values respectively.
 
 === Character types
 
 [source,clojure]
 ----
-"hello"         ; String
-\e              ; Character
-#"[0-9]+"       ; Regular expression
+"hello"         ; string
+\e              ; character
+#"[0-9]+"       ; regular expression
 ----
 
 Strings are contained in double quotes and may span multiple lines. Individual characters are represented with a leading backslash. There are a few special named characters: `\newline` `\spec` `\tab`, etc. Unicode characters can be represented with `\uNNNN` or in octal with `\oNNN`.
@@ -50,13 +48,13 @@ Literal regular expressions are strings with a leading `#`. These are compiled t
 
 [source,clojure]
 ----
-map             ; Symbol
-+               ; Symbol - most punctuation allowed
-clojure.core/+  ; Namespaced symbol
+map             ; symbol
++               ; symbol - most punctuation allowed
+clojure.core/+  ; namespaced symbol
 nil             ; null value
-true false      ; Booleans
-:alpha          ; Keyword
-:release/alpha  ; Keyword with namespace
+true false      ; booleans
+:alpha          ; keyword
+:release/alpha  ; keyword with namespace
 ----
 
 Symbols are composed of letters, numbers, and other punctutation and are used to refer to something else, like a function, value, namespace, etc. Symbols may optionally have a namespace, separated with a forward slash from the name.
