Clojure Toronto now has a new website

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -26,7 +26,7 @@ https://github.com/clojure/clojure-site[clojure-site] github repo.
 * Canada
 ** https://groups.google.com/forum/#!forum/montreal-clojure-user-group[Montreal Clojure User
 Group]
-** https://www.meetup.com/Clojure-Toronto/[Clojure Toronto]
+** https://clojureto.github.io[Clojure Toronto]
 ** https://www.meetup.com/Vancouver-Clojure[Vancouver Clojure]
 [[unitedstates]]
 * United states
