--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -13,7 +13,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * #clojure IRC channel on https://freenode.net[freenode.net]
 * http://clojurians.net[Clojurians Slack Chat]
 * https://clojurians.zulipchat.com[Clojurians Zulip Chat]
-* https://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
+* https://clojure.org/community/user_groups[Clojure User Groups]
 * http://planet.clojure.in/[Planet Clojure] blog aggregator
 * https://clojureverse.org[Clojureverse]
 * https://dev.clojure.org/display/community/Home[Community Wiki]
