--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -35,6 +35,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.appsflyer.com/[AppsFlyer,opts=nofollow]
 * http://www.appsmiths.com/where.php[AppSmiths,opts=nofollow]
 * http://www.appsnsites.com/[Appsnsites,opts=nofollow]
+* http://arcstudiopro.com/[Arc Studio Pro,opts=nofollow]
 * http://ardoq.com/[Ardoq,opts=nofollow]
 * https://atomist.com[Atomist,opts=nofollow]
 * https://attendify.com/[Attendify,opts=nofollow]
