--- a/content/community/contributing_site.adoc
+++ b/content/community/contributing_site.adoc
@@ -24,7 +24,7 @@ If you wish to make a contribution (typo, modification, or new content), you mus
 [[contributor]]
 == How To Become a Contributor
 
-Contributors must sign the Clojure Contributor Agreement prior to submitting changes. The https://secure.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
+Contributors must sign the Clojure Contributor Agreement prior to submitting changes. The https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
 
 The CA is derived from the Oracle Contributor Agreement (OCA), used for OpenJDK, Netbeans and OpenSolaris projects and others. There is a good http://www.oracle.com/technetwork/oca-faq-405384.pdf[OCA FAQ] answering many questions.
 
