fix two more contrib form links

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -15,7 +15,7 @@ The CA does not change the rights or responsibilities of the Clojure community u
 
 == Instructions for submitting the agreement
 
-* Fill out and submit the https://secure.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (an online e-form)
+* Fill out and submit the https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (an online e-form)
 
 == Making a contribution
 
