add missing argument
it seems that a 2-arity func is being invoked with 1 arg
I think a channel needs to passed in... or, according to `put!` docs, a "port" (whatever that is :))

--- a/content/guides/core_async_go.adoc
+++ b/content/guides/core_async_go.adoc
@@ -45,7 +45,7 @@ to respect back-pressure.
     (fn [response]
       (put! out-c response (fn [_] (load-urls (next urls) out-c))))))
 
-(load-urls urls)
+(load-urls urls response-chan)
 ----
 
 In this example we have some nice clean interop code that allows us to
