--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -14,9 +14,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
 * Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
-== Development Release: none available for next release yet
+== Development Release: 1.10.1-beta1
 
-* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.11.0*[Clojure 1.11 pre-release builds]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.1-beta1/[Clojure 1.10.1-beta1]
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.1*[Clojure 1.10.1 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
