fix sponsor image

--- a/content/events/2019/clojurebridge-london-may-2019.adoc
+++ b/content/events/2019/clojurebridge-london-may-2019.adoc
@@ -30,7 +30,7 @@ Thank you to our sponsor https://functional.works-hub.com/[Functional Works] for
 
 Functional Works are breaking down the barriers of hiring the right software engineers and providing a platform for managing the whole process (written in ClojureScript).
 
-image::https://www.works-hub.com/images/homepage/walkthrough02.svg
+image::https://www.works-hub.com/images/homepage/walkthrough02.svg[Functional Works]
 
 === Who is involved
 The event is free of charge and run by unpaid volunteers from the Clojure community. While the workshop is primarily for trans/cis women & non-binary attendees, our coaches and organisers are members of the local Clojure community of any gender or none. Everyone agrees to abide by the Bridge Foundry Code of Conduct.
