--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -47,7 +47,7 @@ sudo ./linux-install-1.10.0.442.sh
 
 === Installation on Windows
 
-An early release version of clj on Windows is available at [clj on Windows](https://github.com/clojure/tools.deps.alpha/wiki/clj-on-Windows).
+An early release version of clj on Windows is available at https://github.com/clojure/tools.deps.alpha/wiki/clj-on-Windows[clj on Windows].
 Please provide feedback at https://dev.clojure.org/jira/browse/TDEPS.
 
 == Other ways to run Clojure
