add old contrib howto info

--- a/content/community/contrib_libs.adoc
+++ b/content/community/contrib_libs.adoc
@@ -101,3 +101,7 @@ And finally, there are some repositories in the Clojure GitHub organization that
 Prior to Clojure 1.3, Clojure had a single "batteries included" library called clojure-contrib that consisted of many independent helper namespaces contributed by the community. In the Clojure 1.3 timeframe, this library was split into the independent libraries that exist today with independent owners. Some of the namespaces were seen as experimental and not promoted into any public library. Stuart Sierra recounts this in more detail in his <<xref/../../news/2012/02/17/clojure-governance#,post>>.
 
 At the time there was an idea that some of the contrib libraries could eventually be promoted into Clojure's core library itself. With time, there has been a desire to keep Clojure's core library small and to allow these independent libraries to stay independent and evolve at their own pace.
+
+== Contrib How-To
+
+Some older content on participating or contributing to contrib can be found at <<contrib_howto#,Contrib How-To>>.
