--- a/content/news/2012/02/17/clojure-governance.adoc
+++ b/content/news/2012/02/17/clojure-governance.adoc
@@ -43,7 +43,7 @@ The first big issue Clojure/core had to confront was the distribution of clojure
 
 My attempts at https://github.com/clojure/clojure-contrib/commit/a6a92b9b3d2bfd9a56e1e5e9cfba706d1aeeaae5[modularizing clojure-contrib within a single Git repository] failed to improve the situation. Eventually, we settled on the solution of separate Git repositories for each library. This was a huge amount of work: dozens of repositories to create and hundreds of files to move. Many of the contrib libraries were stagnant, their original authors lacking time to continue working on them.
 
-Finally, almost a year later, the situation has stabilized: https://dev.clojure.org/display/doc/Clojure%2BContrib[28 libraries], each with its own Git repository, test suite, https://build.clojure.org/[continuous integration], and independent release cycle. The overall code quality is higher and development is moving forward again.
+Finally, almost a year later, the situation has stabilized: <<xref/../../../../../community/contrib_libs#,contrib libraries>>, each with its own Git repository, test suite, https://build.clojure.org/[continuous integration], and independent release cycle. The overall code quality is higher and development is moving forward again.
 
 It was a painful transition for everyone, not least for those of us trying to manage it all and bear the brunt of the inevitable carping. On top of everything else, the whole process overlapped with the release of Clojure 1.3, the first release to break backwards-compatibility in noticeable ways (non-dynamic Vars as a default, long/double as default numeric types).
 
@@ -64,7 +64,7 @@ Conversely, the decision to move some libraries into the language, notably my te
 
 If there was one mistake that I personally made during the 1.3 migration, it was speaking as if Clojure/core *owned* Clojure and clojure-contrib. We don't: Clojure is owned by Rich Hickey, and clojure-contrib is owned jointly by Rich Hickey and contributors. But we *are* the appointed stewards (and Stuarts!) of the open-source Clojure ecosystem. In that role, we have to make decisions about what we choose to invest time in supporting. Given limited time, and following Rich's conservative position on new features, that decision is usually "no."
 
-It's a difficult position to be in. Most of Clojure/core's members come from the free-wheeling, fast-paced open-source world of Ruby on Rails. We really don't enjoy saying "no" all the time. But a conservative attitude toward new features is exactly the reason Clojure is so stable. Patches don't get into the language until they have been https://dev.clojure.org/display/design/JIRA%2Bworkflow[reviewed by at least three people], one of them Rich Hickey. New libraries don't get added to https://dev.clojure.org/display/design/Clojure%2BContrib[clojure-contrib] without multiple mailing-list discussions. None of the new contrib libraries has reached the https://dev.clojure.org/display/design/Contrib%2B1.0.0%2BReleases[1.0.0 milestone], and probably won't for some time. These hurdles are not arbitrary; they are an attempt to guarantee that new additions to Clojure reflect the same consideration and careful design that Rich invested in the original implementation.
+It's a difficult position to be in. Most of Clojure/core's members come from the free-wheeling, fast-paced open-source world of Ruby on Rails. We really don't enjoy saying "no" all the time. But a conservative attitude toward new features is exactly the reason Clojure is so stable. Patches don't get into the language until they have been <<xref/../../../../../community/workflow#,reviewed by at least three people>>, one of them Rich Hickey. New libraries don't get added to contrib without mailing-list discussions. None of the new contrib libraries has reached the 1.0.0 milestone, and probably won't for some time. These hurdles are not arbitrary; they are an attempt to guarantee that new additions to Clojure reflect the same consideration and careful design that Rich invested in the original implementation.
 
 So what is clojure-contrib today? It's a curated set of libraries whose ownership and licensing is governed by the Clojure Contributor Agreement. It could also serve as a proving ground for new features in the language, but this does not imply that every contrib library will eventually make it into the language.
 
