--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -27,6 +27,7 @@ Official:
 * <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
 * Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
 * Issues - https://dev.clojure.org/jira/browse/CLJ[Clojure], https://dev.clojure.org/jira/browse/CLJS[ClojureScript], https://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
+* https://archive.clojure.org/design-wiki/display/design/Home.html[Design wiki archive]
 
 Community:
 
